SigmaCodebackup3rdSep/objects/Recipe_Details__c.object
<CustomObject>
    <fields>
        <fullName>Average_Buying_Price__c</fullName>
        <label>Average Buying Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dependent_Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipe Products (Dependent Recipe)</relationshipLabel>
        <relationshipName>Recipe_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Recipe Details</relationshipLabel>
        <relationshipName>Recipe_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipe Details</relationshipLabel>
        <relationshipName>Recipe_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_of_Measure</valueSetName>
        </valueSet>
    </fields>
    <label>Recipe Details</label>
    <nameField>
        <displayFormat>Rec-{0000}</displayFormat>
        <label>Recipe Details No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Details</pluralLabel>
    <recordTypes>
        <fullName>Additional_Cost</fullName>
        <active>true</active>
        <description>Additional Cost associated with the recipe</description>
        <label>Additional Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Additional_Products</fullName>
        <active>true</active>
        <label>Additional Products</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ingredients</fullName>
        <active>true</active>
        <description>Ingredients used for recipe</description>
        <label>Ingredients</label>
    </recordTypes>
    <recordTypes>
        <fullName>Package_Materials</fullName>
        <active>true</active>
        <description>Package materials used for recipe</description>
        <label>Package Materials</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Components</fullName>
        <active>true</active>
        <label>Product Components</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stages</fullName>
        <active>true</active>
        <label>Stages</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>